z-index-small-fix

--- a/09-lection7/01-burger-menu/burger-menu.css
+++ b/09-lection7/01-burger-menu/burger-menu.css
@@ -9,7 +9,7 @@ box-sizing: border-box;
 background: var(--grey-bg);
 transform: translateX(-100vw);
 transition: transform 200ms ease-in-out;
-z-index: 2;
+z-index: 3;
 }
 
 .burger-menu[data-open] {
